Fixes banner screen size on iphone 6

--- a/src/Banner/Banner.scss
+++ b/src/Banner/Banner.scss
@@ -150,8 +150,8 @@
     }
 
     .container {
-      background-size: 100% 295px;
-      height: 295px;
+      background-size: 100% 275px;
+      height: 275px;
     }
 
     @keyframes typing {
@@ -164,7 +164,7 @@
     .typewriter h1 {
       position: absolute;
       left: 11%;
-      top: 8%;
+      top: 10%;
       font-size: 15px;
     }
 
